c2prj1_cards/grade.txt
Grading at Mon Nov 18 09:25:32 UTC 2019
Compiling cards.c
cards.c: In function ‘card_from_num’:
cards.c:103:7: error: unused variable ‘suit_num’ [-Werror=unused-variable]
   int suit_num = c / 13;
       ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
